# saldo-paradigms

./: Dockerfile  Makefile  README.md  haskell-deps
saldo-inflector/: CHANGELOG.md  Makefile  README.md  cp_deps.sh  package.yaml.linux  package.yaml.macos
saldo-inflector/csrc/: saldo.cpp  saldo.h
saldo-inflector/src/: AdjBuildSw.hs  AdjRulesSw.hs  CommandsSw.hs  Dictionary.hs  Frontend.hs  GenRulesSw.hs  General.hs  NounBuildSw.hs  NounRulesSw.hs  OtherBuildSw.hs  OtherRulesSw.hs  Saldo.hs  SharedString.hs  TypesSw.hs  Util.hs  VerbBuildSw.hs  VerbRulesSw.hs
saldo-python/: MANIFEST.in  correct_tag.py  pyproject.toml
